[package]
name = "eas_api"
version = "0.2.0"
authors = ["Bruno Ricci <brricci@orange.fr>"]
edition = "2021"


[lib]
name = "easlib"
path = "src/lib.rs"

[[bin]]
name = "partial_test"
path = "src/bin/partial_test.rs"
[[bin]]
name = "eas_test"
path = "src/bin/eas_test.rs"
[[bin]]
name = "eas_thread"
path = "src/bin/eas_thread.rs"
[[bin]]
name = "eas_delete"
path = "src/bin/eas_delete.rs"
[[bin]]
name = "download_png"
path = "src/bin/download_png.rs"
[[bin]]
name = "static_ref"
path = "src/bin/static_ref.rs"
[[bin]]
name = "simple_c"
path = "src/bin/simple_consumer.rs"
[[bin]]
name = "simple_p"
path = "src/bin/simple_producer.rs"
[[bin]]
name = "metadata"
path = "src/bin/metadata.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.34.0"
data-encoding = "2.3.2"
error-chain = "0.12.4"
env_logger = "0.9.0"
futures = "0.3.13"
lazy_static = "1.4.0"
log = "0.4.14"
rand = "0.8.5"
rdkafka = { version = "0.28" }
reqwest = { version ="0.11.2", features = ["json", "stream", "serde_json", "multipart"] }
ring = "0.16.20"
serde_json =  "1.0.64"
serde = { version = "1.0.124", features = ["derive"] }
tempfile = "3.2.0"
tokio = { version = "1.14.0", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
once_cell = "1.8.0"